<resources>
    <string name="app_name">Konveksi Mas Wardi</string>

    <string name="title_notification">Title Notification</string>
    <string name="title_history">Riwayat</string>
    <string name="title_rp">Rp. 10.000</string>
    <string name="title_saldo_kas">Saldo Kas</string>
    <string name="title_saldo_masuk">Saldo Masuk</string>
    <string name="title_saldo_keluar">Saldo Keluar</string>

    <string name="title_sumber_pemasukan" translatable="false">Sumber Pemasukan</string>
    <string name="dec_sumbar_pemasukan" translatable="false">Masukan sumber pemasukan</string>
    <string name="dec_nominal" translatable="false">Masukan nominal saldo</string>
    <string name="title_nominal_saldo" translatable="false">Nominal Saldo</string>

    <string name="title_sumber_pengeluaran" translatable="false">Sumber Pengeluaran</string>
    <string name="dec_sumbar_pengeluaran" translatable="false">Masukan sumber Pengeluaran</string>
    <string name="title_simpan" translatable="false">Simpan</string>

    <string name="title_error_et" translatable="false">Silahkan isi field ini!</string>
    <string name="title_admin" translatable="false">Admin</string>
    <string name="title_day" translatable="false">Selamat Malam,</string>
    <string name="title_null">null</string>
    <string name="title_data_null">Tidak ada riwayat pekerjaan!</string>
    <string name="title_tipe">Tipe</string>
    <string name="title_user">User</string>
    <string name="title_client">Client</string>
    <string name="title_pengerjaan_hari_ini">Total Pengerjaan Hari Ini</string>
    <string name="title_activity_client">ClientActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tambah_user">Tambah User</string>
    <string name="title_nama_client">Nama Client</string>
    <string name="error_filed">Silahkan isi field ini!</string>
    <string name="title_tambah_client">Tambah Client</string>
    <string name="title_nama_user">Nama User</string>
    <string name="title_tambah_type">Tambah Tipe</string>
    <string name="title_nama_tipe">Nama Tipe</string>
    <string name="title_jumlah">Jumlah</string>
    <string name="title_action">Action</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="edit_client">Edit Client</string>
    <string name="edit_user">Edit User</string>
    <string name="title_rekap">Rekap</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="title_sampai">Sampai</string>
    <string name="title_total">Total</string>
    <string name="zero">0</string>
    <string name="title_lihat_history">Lihat History</string>

    <string name="title_cancel">Tidak</string>
    <string name="title_yes">Ya</string>
    <string name="title_history_rekap">Riwayat Rekap</string>
    <string name="title_date">Tanggal</string>
    <string name="title_detail_rekap">Detail rekap</string>

</resources>